# ops-beacon-services

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
bot-telegram/: .dockerignore  .gitignore  Dockerfile  INSTRUCCIONES.md  README.md  pyproject.toml
bot-telegram/config/: config.example.yaml
bot-telegram/src/bot_telegram/: __init__.py
bot-telegram/src/bot_telegram/application/: __init__.py
bot-telegram/src/bot_telegram/application/services/: __init__.py  event_table_formatter.py
bot-telegram/src/bot_telegram/application/use_cases/: __init__.py  forward_error_events.py
bot-telegram/src/bot_telegram/domain/: __init__.py
bot-telegram/src/bot_telegram/domain/entities/: __init__.py  event.py
bot-telegram/src/bot_telegram/domain/enums/: __init__.py  alert_level.py  event_status.py
bot-telegram/src/bot_telegram/domain/interfaces/: __init__.py  ports.py
bot-telegram/src/bot_telegram/infrastructure/: __init__.py
bot-telegram/src/bot_telegram/infrastructure/config/: __init__.py  settings.py
bot-telegram/src/bot_telegram/infrastructure/mqtt/: __init__.py  subscriber.py
bot-telegram/src/bot_telegram/infrastructure/parsing/: __init__.py  json_event_parser.py
bot-telegram/src/bot_telegram/infrastructure/telegram/: __init__.py  notifier.py
bot-telegram/src/bot_telegram/presentation/: __init__.py  app.py  bootstrap.py  main.py
dth-11-processor/: .gitignore  Dockerfile  README.md  (+4 more)
ener-vault/: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
ener-vault/alembic/: env.py
ener-vault/alembic/versions/: 001_initial_energy_meters.py  002_add_device_id_unique_local_time.py  003_add_index_local_time.py  004_devices_catalog_fk.py  005_updated_at_triggers.py  006_entities_device_assignments.py  007_drop_device_meter_model_notes_timezone.py
ener-vault/app/: main.py
ener-vault/app/api/: integrity.py  pagination_query.py  router.py
ener-vault/app/api/routes/: device_entity_assignments.py  devices.py  entities.py  measurements.py
ener-vault/app/config/: conf.py
ener-vault/app/db/: session.py
ener-vault/app/domain/: device_entity_assignments.py  devices.py  entities.py  measurements.py
ener-vault/app/models/: __init__.py  base.py  device.py  device_entity_assignment.py  entity.py  measurement.py
ener-vault/app/schemas/: __init__.py  device.py  device_entity_assignment.py  entity.py  list_sort.py  measurement.py  pagination.py
ener-vault/config/: .env.example
ener-vault/tests/: conftest.py  test_devices_api.py  test_entities_assignments_api.py  test_measurements_api.py
energy-meter-simulator/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
energy-meter-simulator/app/: main.py
energy-meter-simulator/config/: config.yml.example
fred-ops/: ARCHITECTURE.md  CREATING_A_SERVICE.md  README.md  pyproject.toml
fred-ops/examples/: config_pub.yml  config_pubsub.yml  config_sub.yml  processor.py
fred-ops/fred_ops/: __init__.py  app.py  cli.py  config.py  logging_config.py
fred-ops/fred_ops/dashboard/: __init__.py  app.py  recorder.py  sink.py
fred-ops/fred_ops/runtime/: broker.py  pub.py  pubsub.py  sub.py
fred-ops/tests/: test_app.py  test_config.py  test_dashboard_sink.py
fred-ops/tests/runtime/: test_broker.py
fred-ops/tests/test_runtime/: test_broker_reconnect.py  test_pub.py  test_pubsub.py  test_sub.py
meter-ops/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
meter-ops/app/: ener_vault_client.py  main.py  models.py  mqtt_topic.py
meter-ops/config/: config.yml.example
victor-ia/: Dockerfile  README.md  pyproject.toml
victor-ia/app/: exceptions.py  main.py
victor-ia/app/api/: router.py
victor-ia/app/api/routes/: agent.py
victor-ia/app/api/security/: api_key.py
victor-ia/app/config/: conf.py
victor-ia/app/domain/: agent.py
victor-ia/app/http/: __init__.py  problem.py
victor-ia/app/models/: agent.py
victor-ia/app/tools/: __init__.py  ener_vault.py  registry.py  teams_notify.py
victor-ia/config/: .env.example
(+18 files in other folders)
