[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "energy-meter-simulator"
version = "0.1.0"
description = "MQTT publisher simulating energy meter readings via fred-ops (pub mode)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fred-ops",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.uv.sources]
fred-ops = { path = "../fred-ops", editable = true }
