[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "victor-ia"
version = "0.1.0"
description = "Victor IA — agent with pluggable tools (ener-vault, …)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
